[package]
name = "bavy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "bevy"]
description = "This package may become something, or it may remain nothing. Bavy is not Bevy, that is for certain."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
